# ftdi_io

./: LICENSE  README.md  pyproject.toml
demos/: ftio_demo.py
ftio/: __init__.py  _ft_define.py  ftio.py
