[project]
name = "ftio"
authors = [
    { name = "Dreamer", email = "wby951@qq.com" },
]
version = "0.1.0"
description = "This is a simple program to control the FTDI IO pins."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ftd2xx>=1.3.8",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ftio","demo"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true